Fix loading and z-index

--- a/src/app/views/gallery/gallery.component.scss
+++ b/src/app/views/gallery/gallery.component.scss
@@ -1,3 +1,7 @@
 .gallery-wrapper {
   margin-top: 1rem;
 }
+ngx-gallery {
+  position: relative;
+  z-index: 0;
+}
