--- a/src/styles.scss
+++ b/src/styles.scss
@@ -98,3 +98,7 @@ section {
 .mat-tab-body-content {
   transform: none !important;
 }
+
+.ngx-gallery-image.ngx-gallery-active {
+  z-index: 0;
+}
